--- a/env.example
+++ b/env.example
@@ -5,3 +5,6 @@ DATABASE_NAME=leroy-wordpress
 DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_ROOT_PASSWORD=root_password
+DATABASE_PORT=3306
+
+PHP_MY_ADMIN_PORT=8081
