--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
-CONTAINER_NAME=leroy-wordpress
+CONTAINER_NAME=leroy
 CONTAINER_PORT=8080
 
-DATABASE_NAME=leroy-wordpress
+DATABASE_NAME=leroy
 DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_ROOT_PASSWORD=root_password
