--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ wp-config.php
 /src/wp-content/themes/twenty*/
 /src/wp-content/plugins/hello.php
 /src/wp-content/plugins/akismet
+
+./src/themes/twentytwentyfour
