--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             - ${CONTAINER_PORT}:80
         volumes:
             - ./nginx:/etc/nginx/conf.d:rw
-            - wordpress:/var/www/html
+            - wordpress:/var/www/html:rw
         networks:
             - internal
 
